--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="menu.css">
     <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
-    
-    <script src="path/to/luxy.js" charset="utf-8"></script>
-    <script charset="utf-8">luxy.init();</script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +38,6 @@
     </header>
 
     <main>
-    <div id="luxy">
         <div class="grid_1">
             <h1>PORTFOLIO</h1>
             <h2>SARA GRØNKJÆR</h2>
@@ -50,7 +46,7 @@
 
         <div class="grid_2">
             <div>
-                <p>Mit navn er Sara Grønkjær og jeg studerer multimediedesigner på KEA. I forbindelse med vores eksamen her på 1. semester har vi skulle producere et online portfolio over vores tidligere projekter og udfaldet af dette er altså denne hjemmeside. Her viser jeg det færdige resultat af disse projekter og beskriver hvad jeg har lært. Derudover er det muligt at læse mere om mig via linket herunder.</p>
+                <p>Mit navn er Sara Grønkjær og jeg studerer multimediedesigner på KEA. I forbindelse med eksamen på 1. semester har vi skulle producere et online portfolio over vores tidligere projekter og udfaldet af dette er altså denne hjemmeside. Her viser jeg det færdige resultat af disse projekter og beskriver hvad jeg har lært. Derudover er det muligt at læse mere om mig via linket herunder.</p>
                 <br>
                 <a href="om.html">LÆS OM MIG →</a>
             </div>
@@ -64,7 +60,7 @@
         </div>
         <div class="grid_3">
             <div class="projekter2">
-                <p>Første semester af multimediedesignuddannelsen er bygget op omkring forskellige temaer. Ud af disse har jeg valgt at fremhæve følgende i mit portfolio: Grundlæggende web, grundlæggende UI/UX, animation og grundlæggende indhold. Til hver tema har vi skulle aflevere en større opgave for at vise at vi har nået de læringsmål der er blevet sat. Læs mere om de forskellige temaer, opgaverne og hvad jeg har lært af disse via linket herunder.</p>
+                <p>Første semester af multimediedesignuddannelsen er bygget op omkring forskellige temaer. Ud af disse har jeg valgt at fremhæve følgende i mit portfolio: Grundlæggende web, grundlæggende UI/UX, animation og grundlæggende indhold. Til hver tema har vi skulle aflevere en større opgave for at vise at vi har nået de læringsmål, der er blevet sat. Læs mere om de forskellige temaer, opgaverne og hvad jeg har lært af disse via linket herunder.</p>
                 <br>
                 <a href="projekter.html">SE PROJEKTER →</a>
             </div>
@@ -82,7 +78,6 @@
                 <p>_________________________________________________________________</p>
             </div>
         </div>
-    </div>
     </main>
 
     <footer>
@@ -98,8 +93,6 @@
             </div>
         </div>
     </footer>
-    
     <script src="script.js"></script>
-    <script src="path/to/luxy.js" charset="utf-8"></script>
 </body>
 </html>
