--- a/tema4.html
+++ b/tema4.html
@@ -42,7 +42,7 @@
             <p>PROJEKTER  /  04 ANIMATION</p>
             <h6>04 ANIMATION</h6>
             <br>
-            <p class="tekst_afstand">I Tema 3 blev vi introduceret til animation, hvilket både indebar design i Illustrator og kodning i HTML, CSS og JavaScript. Vi fik stillet til opgave at lave vores eget spil, hvoraf der var nogle specifikke krav til spillet som skulle følge. Dette var blandt andet at der skulle være gode og onde objekter at klikke på og at der skulle indgå UI-elementer. Til opgaven skulle vi også lave henholdsvis aktivitetsdiagram og State Machine Diagram i VS code.
+            <p class="tekst_afstand">I Tema 3 blev vi introduceret til animation, hvilket både indebar design i Illustrator og kodning i HTML, CSS og JavaScript. Vi fik stillet til opgave at lave vores eget spil, hvoraf der var nogle specifikke krav til spillet som skulle følges. Dette var blandt andet at der skulle være gode og onde objekter at klikke på og at der skulle indgå UI-elementer. Til opgaven skulle vi også lave henholdsvis aktivitetsdiagram og State Machine Diagram i VS code.
             </p>
             </div>
         </div>
@@ -58,14 +58,14 @@
 
         <div class="proces_tekst">
             <div>
-                <p>Efter at have fundet frem til et spilkoncept, skulle vi vælge et stiludgangspunkt og udvikle et design baseret på dette. Her valgte jeg ‘flat design,’ da jeg syntes det gik godt i spænd med spillet. Vi blev også introduceret til forskellige designprincipper indenfor karakterdesign og baggrundsdesign. Her valgte jeg ‘baby bias’, ‘bouba og kiki’ og ‘twinning’ til mit karakterdesign og ‘atmospheric perspective’ til mit baggrundsdesign. Herefter begyndte jeg at skitsere et udkast til spillets design, hvoraf forsiden kan ses på billedet til højre. Skitserne bestod af en startskærm, spilskærm, baggrund, to figurer og UI-elementer. Med udgangspunkt i papirprototypen gav vi hinanden peer to peer feedback. 
+                <p>Efter at have fundet frem til et simpelt spilkoncept, skulle vi vælge et stiludgangspunkt og udvikle et design baseret på dette. Her valgte jeg ‘flat design,’ da jeg syntes det gik godt i spænd med spillet. Vi blev også introduceret til forskellige designprincipper indenfor karakterdesign og baggrundsdesign. Her valgte jeg ‘baby bias’, ‘bouba og kiki’ og ‘twinning’ til mit karakterdesign og ‘atmospheric perspective’ til mit baggrundsdesign. Herefter begyndte jeg at skitsere et udkast til spillets design, hvoraf forsiden kan ses under 'Uddrag fra processen.' Skitserne bestod af en startskærm, spilskærm, baggrund, to figurer og UI-elementer. Med udgangspunkt i papirprototypen gav vi hinanden brugbar peer to peer feedback om designet og funktionaliteten. 
                     Denne papirprototype blev altså en skabelon for det, der skulle designes i Illustrator. Jeg havde ingen erfaringer med programmet, men kombinationen af at skulle udarbejde spilelementerne og samtidigt få undervisning om det, gav mig en del ny viden og færdigheder, som jeg kan bruge fremadrettet.</p>
                 <br>
                 <p>For at illustrere spillets opbygning udarbejdede jeg et aktivitetsdiagram og State Machine Diagram via Drawio i VS Code. Diagrammerne bidrog til en mere effektiv og struktureret udviklingsproces og er en metode jeg vil anvende hvis jeg står overfor et lignende projekt.</p>
                 <br>
-                <p>Med formål om at gøre spillet mere levende lavede jeg lydoptagelser, der skulle afspilles på de gode og dårlige elementer når de blev klikket på. Lydene redigerede jeg i Audition, som også lå udenfor mine erfaringer, og konverterede dem som mp3-filer. Kodningen i JavaScript tog udgangspunkt i den viden vi i undervisningen havde fået om funktioner, variabler, events og lignende. Hertil blev inspector-værktøjet et afgørende redskab for at kunne identificere de fejl, der løbende opstod og for at undersøge om JavaScript-kodningen virkede.</p>
+                <p>Med formål om at gøre spillet mere levende lavede jeg lydoptagelser, der skulle afspilles på de gode og dårlige elementer når de blev klikket på. Lydene redigerede jeg i Audition, som jeg ej heller havde erfaringer med, og konverterede dem som mp3-filer. Kodningen i JavaScript tog udgangspunkt i den viden vi i undervisningen havde fået om funktioner, variabler, events og lignende. Hertil blev inspector-værktøjet et afgørende redskab for at kunne identificere de fejl, der løbende opstod og for at undersøge om JavaScript-kodningen virkede. Slutligt blev ‘W3C Web validator’ i VS code brugt til at validere HTML og 'https://jigsaw.w3.org/css-validator/' blev brugt til at validere CSS.</p>
                 <br>
-                <p>Overordnet set har temaet givet mig praktiske erfaringer og relevant viden indenfor design og kodning af spil, som jeg kan drage fordel af i fremtiden.</p>
+                <p>Overordnet set har temaet givet mig praktiske erfaringer og relevant viden indenfor design og kodning af spil, som jeg kan drage fordel af fremadrettet. Det har især udviddet min forståelse af JavaScript og de mange muligheder denne form for kodning giver.</p>
             </div>
             <div>
                 <h3>UDDRAG FRA PROCESSEN</h3>
