sprog til dansk

--- a/om.html
+++ b/om.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,27 +39,27 @@
     <main>
         <div class="grid_om">
         <div>
-        <h2>OM</h2>
-        <br>
-        <p>Oprindeligt kommer jeg fra Skive, men flyttede for et par år siden til København for at udvikle mig rent personligt og fokusere på min fremtid. Jeg har altid haft en interesse for det kreative og særligt fotografi, hvilket ledte mig til dagshøjskolen Vera, hvor jeg dedikerede et halvt år til at arbejde med fotografiet fra et kunstnerisk perspektiv. Derefter arbejdede jeg fuldtid på en café alt imens jeg reflekterede over, hvilken retning jeg gerne ville gå. Det resulterede i beslutningen om at studere multimediedesigner på KEA.</p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <hr>
-        <br>
+            <h2>OM</h2>
+            <br>
+            <p>Oprindeligt kommer jeg fra Skive, men flyttede for et par år siden til København for at udvikle mig rent personligt og fokusere på min fremtid. Jeg har altid haft en interesse for det kreative og særligt fotografi, hvilket ledte mig til dagshøjskolen Vera, hvor jeg dedikerede et halvt år til at arbejde med fotografiet fra et kunstnerisk perspektiv. Derefter arbejdede jeg fuldtid på en café alt imens jeg reflekterede over, hvilken retning jeg gerne ville gå. Det resulterede i beslutningen om at studere multimediedesigner på KEA.</p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <hr>
+            <br>
         <div class="CV">
-        <p>UDDANNELSE</p>
-        <p>STX studentereksamen (Skive Gymnasium & HF)  /  2016-2019</p>
-        <p>Vera dagshøjskole (fotografi)  /  Januar-juni 2022</p>
-        <br>
-        <br>
-        <p>ERHVERVSERFARING</p>
-        <p>Tjener (forskellige steder)  /  2019-2023</p>
-        <p>Logodesign (for Optiel)  /  2021</p>
-        <p>SoMe-ansvarlig (Sidecar)  /  2023-nu</p>
-        <br>
-        <hr>
+            <p>UDDANNELSE</p>
+            <p>STX studentereksamen (Skive Gymnasium & HF)  /  2016-2019</p>
+            <p>Vera dagshøjskole (fotografi)  /  Januar-juni 2022</p>
+            <br>
+            <br>
+            <p>ERHVERVSERFARING</p>
+            <p>Tjener (forskellige steder)  /  2019-2023</p>
+            <p>Logodesign (for Optiel)  /  2021</p>
+            <p>SoMe-ansvarlig (Sidecar)  /  2023-nu</p>
+            <br>
+            <hr>
         </div>
         </div>
         <div class="selvportraet2">
@@ -129,12 +129,7 @@
                 <p>FACEBOOK  /  Sara Grønkjær</p>
                 <p>__________________________________________________________</p>
             </div>
-            
-
         </div>
-
-        </div>
-   
     </main>
 
 
