--- a/tema5.html
+++ b/tema5.html
@@ -94,6 +94,7 @@
                 <p>Vi oprettede et GitHub repository til vores samarbejde om selve kodningen af sitet. Det gav nogle udfordringer til at starte med, men efter at have fået en bedre forståelse af funktionen endte det med at fungere optimalt til sidst. Efter at have færdigkodet det redesignede site kørte vi en lighthousetest via ‘inspect’-funktionen i browseren. Overordnet set scorede hjemmesiden høje karakterer i alle kategorier pånær ‘SEO.’ Siden dette blot er et udkast til et design har vi ikke fokuseret på SEO-delen. Derudover var der nogle få småjusteringer, der kunne laves for at forbedre brugeroplevelsen. Udover lighthousetesten lavede vi endnu engang 5-sekunders test og BERT-test med samme spørgsmål for at kunne sammenligne med tidligere testresultater. Her viste det sig, at vi vores færdige produkt afspejlede de mål vi havde sat for det; at skabe et minimalistisk og indbydende design, som rent funktionelt er informativt og nemt at navigere i således at brugeroplevelsen optimeres. Dog reflekterede vi efterfølgende over de forskellige bias der kan være ved de to test, hvilket vi inddrog i vores præsentation af opgaven. Slutligt blev ‘W3C Web validator’ i VS code brugt til at validere koden.</p>
             </div>
         </div>
+    </div>
     </main>
 
     <footer>
